# Middlesp

./: Cargo.toml  README.md
src/: main.rs  safe_read.rs  state.rs
src/spec/: http.rs  mod.rs  serialise.rs  wifi.rs
