[package]
name = "middlesp"
version = "0.1.0"
authors = ["Wilf Silver <git@wilfsilver.co.uk>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "middlesp"
harness = false   # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = [
  "critical-section",
  "embassy-time-driver",
  "embassy-sync",
] }
embedded-svc = "0.28.1"
futures = "0.3.31"
enumset = "1.1.5"
anyhow = "1.0.97"
heapless = "0.8.0"

# Updated embassy-net in Cargo.toml
embassy-net = { version = "0.6.0", features = [
  "tcp",
  "udp",
  "dhcpv4",
  "medium-ethernet",
  #addition:
  "dns",
] }

smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "proto-dhcpv4",
  # "proto-igmp",
  "proto-ipv4",
  "socket-dhcpv4",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
  # addition:
  "dns-max-server-count-4",
] }

embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768"] }

reqwless = { version = "0.13.0", default-features = false, features = [
  "embedded-tls",
] }

[build-dependencies]
embuild = "0.33"
